master must changes vite, vueTS, ionic working together

--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,5 +1,7 @@
 {
-  "name": "business-assistant",
-  "integrations": {},
+  "name": "pl.witkac.kartamiekszanca",
+  "integrations": {
+    "capacitor": {}
+  },
   "type": "vue"
 }
