--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,10 +11,8 @@
     "allowSyntheticDefaultImports": true,
     "sourceMap": true,
     "baseUrl": ".",
-    "types": [
-      "webpack-env",
-      "jest"
-    ],
+    "resolveJsonModule": true,
+
     "paths": {
       "@/*": [
         "src/*"
