--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,27 +1,23 @@
-module.exports = {
-  root: true,
-  env: {
-    node: true
+{
+  "env": {
+    "browser": true,
+    "es2021": true
   },
-  'extends': [
-    'plugin:vue/vue3-essential',
-    // 'eslint:recommended',
-    '@vue/typescript/recommended',
+  "extends": [
+    "eslint:recommended",
+    "plugin:vue/vue3-recommended",
     "prettier",
+    "plugin:import/recommended",
     "plugin:import/typescript"
-
   ],
-  parserOptions: {
-    ecmaVersion: 2020
+  "parserOptions": {
+    "ecmaVersion": 12,
+    "parser": "@typescript-eslint/parser",
+    "sourceType": "module"
   },
-  rules: {
-    
-  },
-  rules: {
-    // 'no-console': process.env.NODE_ENV === 'production' ? 'warn' : 'off',
-    // 'no-debugger': process.env.NODE_ENV === 'production' ? 'warn' : 'off',
-    // 'vue/no-deprecated-slot-attribute': 'off',
-    // '@typescript-eslint/no-explicit-any': 'off',
+  "ignorePatterns": ["node_modules/", "public/", "src/locales/"],
+  "plugins": ["vue", "@typescript-eslint", "import"],
+  "rules": {
     "vue/attributes-order": [
       "warn",
       {
@@ -78,26 +74,5 @@ module.exports = {
     ],
     "import/no-unresolved": "off",
     "import/no-named-as-default": "off"
-  },
-  overrides: [
-    {
-      files: [
-        '**/__tests__/*.{j,t}s?(x)',
-        '**/tests/unit/**/*.spec.{j,t}s?(x)'
-      ],
-      env: {
-        jest: true
-      }
-    }
-  ]
+  }
 }
-
-//   "parserOptions": {
-//     "ecmaVersion": 12,
-//     "parser": "@typescript-eslint/parser",
-//     "sourceType": "module"
-//   },
-//   "ignorePatterns": ["node_modules/", "public/", "src/locales/"],
-//   "plugins": ["vue", "@typescript-eslint", "import"],
-  
-// }
