--- a/package.json
+++ b/package.json
@@ -1,42 +1,59 @@
 {
-  "name": "ionic-app-base",
+  "name": "pl.witkac.kartamieszkanca",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "test:unit": "vue-cli-service test:unit",
-    "test:e2e": "vue-cli-service test:e2e",
-    "lint": "vue-cli-service lint"
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview",
+    "ionic:serve": "vite --host --port 8100",
+    "buildios_old": "ionic capacitor build ios",
+    "resources": "cordova-res ios --skip-config --copy && cordova-res ios --skip-config --copy",
+    "buildios": "npm run build && capacitor sync ios && capacitor open ios",
+    "ios": "ionic cap run ios -l --external",
+    "buildandroid": "npm run build && capacitor sync android && capacitor open android",
+    "lint": "eslint ./src --ext .js,.ts,.vue"
   },
   "dependencies": {
-    "@ionic/vue": "^6.0.0",
-    "@ionic/vue-router": "^6.0.0",
-    "core-js": "^3.6.5",
-    "tslint": "^6.1.3",
-    "vue": "^3.2.21",
-    "vue-router": "^4.0.12"
+    "@awesome-cordova-plugins/nfc": "^5.41.0",
+    "@capacitor-community/barcode-scanner": "^2.1.0",
+    "@capacitor-community/http": "^1.4.1",
+    "@capacitor/android": "3.4.3",
+    "@capacitor/app": "1.1.1",
+    "@capacitor/browser": "^1.0.7",
+    "@capacitor/camera": "^1.3.1",
+    "@capacitor/core": "3.4.3",
+    "@capacitor/ios": "3.4.3",
+    "@ionic/storage": "^3.0.6",
+    "@ionic/vue": "^6.0.16",
+    "@ionic/vue-router": "^6.0.16",
+    "@witkac/kartamiejska-resources": "0.21.13",
+    "@witkac/kartamiejska-shared": "0.13.3",
+    "apollo-boost": "0.4.9",
+    "apollo-client": "2.6.10",
+    "phonegap-nfc": "^1.2.0",
+    "vue": "^3.2.31",
+    "vue-router": "^4.0.14",
+    "webpack": "^5.72.0"
   },
   "devDependencies": {
-    "@types/jest": "^27.0.2",
-    "@typescript-eslint/eslint-plugin": "^5.6.0",
-    "@typescript-eslint/parser": "^5.6.0",
-    "@vue/cli-plugin-babel": "~5.0.0-rc.1",
-    "@vue/cli-plugin-e2e-cypress": "~5.0.0-rc.1",
-    "@vue/cli-plugin-eslint": "~5.0.0-rc.1",
-    "@vue/cli-plugin-router": "~5.0.0-rc.1",
-    "@vue/cli-plugin-typescript": "~5.0.0-rc.1",
-    "@vue/cli-plugin-unit-jest": "~5.0.0-rc.1",
-    "@vue/cli-service": "~5.0.0-rc.1",
-    "@vue/eslint-config-typescript": "^9.1.0",
-    "@vue/test-utils": "^2.0.0-rc.16",
-    "@vue/vue3-jest": "^27.0.0-alpha.3",
-    "babel-jest": "^27.3.1",
-    "cypress": "^8.7.0",
-    "eslint": "^8.4.1",
-    "eslint-plugin-vue": "^8.2.0",
-    "jest": "^27.3.1",
-    "ts-jest": "^27.0.7",
-    "typescript": "^4.3.5"
+    "@capacitor/cli": "^3.4.3",
+    "@types/node": "^17.0.23",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
+    "@vitejs/plugin-vue": "^2.2.4",
+    "@vue/cli-plugin-typescript": "~5.0.4",
+    "@vue/cli-service": "5.0.4",
+    "@vue/compiler-sfc": "3.2.31",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-vue": "^7.17.0",
+    "typescript": "^4.6.2",
+    "vite": "^2.8.6",
+    "vue-tsc": "^0.32.1"
   }
 }
