--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "@witkac/kartamiejska-shared": "0.13.3",
     "apollo-boost": "0.4.9",
     "apollo-client": "2.6.10",
+    "firebase": "^9.6.11",
     "phonegap-nfc": "^1.2.0",
+    "tslint": "^6.1.3",
     "vue": "^3.2.31",
     "vue-router": "^4.0.14",
     "webpack": "^5.72.0"
